# MAF-DEMO

./: .gitignore  AI_FOUNDRY_SETUP.md  AZURE_DEPLOY.md  Procfile  README.md
backend/: .env.example  .gitignore  pyproject.toml  run.sh  startup.sh
backend/app/: __init__.py  config.py  main.py
backend/app/agents/: __init__.py  multi_agent_system.py  visualization.py
backend/app/api/: __init__.py  agent_routes.py
frontend/: package-lock.json
frontend/src/: App.css  App.tsx
frontend/src/components/: VisualizationPane.css  VisualizationPane.tsx
